--- a/app/src/main/res/layout/fragment_add_edit_date_note.xml
+++ b/app/src/main/res/layout/fragment_add_edit_date_note.xml
@@ -32,13 +32,12 @@
                 android:hint="@string/write_a_note" />
         </ScrollView>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <FrameLayout
             android:id="@+id/buttonsContainer"
             android:layout_width="52dp"
             android:layout_height="52dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
-
             <ImageView
                 android:id="@+id/addButton"
                 android:layout_width="match_parent"
@@ -54,8 +53,7 @@
                 android:src="@drawable/icon_check_green"
                 android:onClick="@{() -> viewModel.onSaveNoteClick()}"
                 app:booleanVisibility="@{!viewModel.isAddButtonVisible}" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </FrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
