--- a/app/src/main/res/layout/fragment_add_edit_main_note.xml
+++ b/app/src/main/res/layout/fragment_add_edit_main_note.xml
@@ -25,7 +25,7 @@
             android:onClick="@{() -> viewModel.onDeleteNoteClick()}"
             app:booleanVisibility="@{!viewModel.isAddButtonVisible}" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <FrameLayout
             android:id="@+id/addEditButtonsContainer"
             android:layout_width="48dp"
             android:layout_height="48dp"
@@ -46,7 +46,7 @@
                 android:src="@drawable/icon_check_green"
                 android:onClick="@{() -> viewModel.onSaveNoteClick()}"
                 app:booleanVisibility="@{!viewModel.isAddButtonVisible}" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </FrameLayout>
 
         <ScrollView
             android:id="@+id/addNoteInputContainer"
