--- a/app/src/main/res/layout/fragment_calendar_date.xml
+++ b/app/src/main/res/layout/fragment_calendar_date.xml
@@ -99,31 +99,27 @@
                 app:layout_constraintTop_toBottomOf="@id/dateWeatherContainer"
                 android:layout_marginTop="16dp">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
+                <LinearLayout
                     android:id="@+id/addNoteContainer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
+                    android:gravity="center_vertical"
                     app:booleanVisibility="@{!viewModel.noteVisible}"
                     android:onClick="@{() -> viewModel.onAddNoteClick()}">
                     <ImageView
                         android:id="@+id/addNoteButton"
                         android:layout_width="48dp"
                         android:layout_height="48dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
                         android:src="@drawable/icon_plus_green" />
                     <TextView
                         android:id="@+id/addNoteTextView"
                         style="@style/Text.MainControlsHint"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constraintStart_toEndOf="@id/addNoteButton"
-                        app:layout_constraintTop_toTopOf="@id/addNoteButton"
-                        app:layout_constraintBottom_toBottomOf="@id/addNoteButton"
                         android:text="@string/add_note" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                </LinearLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/noteControlsContainer"
