--- a/app/src/main/res/layout/fragment_post_addresses.xml
+++ b/app/src/main/res/layout/fragment_post_addresses.xml
@@ -47,24 +47,16 @@
             android:background="@null"
             android:onClick="@{() -> viewModel.onAddPostAddressClick()}" />
 
-        <LinearLayout
+        <TextView
             android:id="@+id/addAddressesTitleView"
+            style="@style/Text.ExplanatoryMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/addPostAddressButton"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:orientation="vertical"
-            app:booleanVisibility="@{!viewModel.isAddressListVisible()}">
-            <TextView
-                style="@style/Text.ExplanatoryMessage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/add_postal_addresses_title" />
-
-            <ImageView
-                style="@style/ExplanatoryMessageIcon"
-                android:src="@drawable/icon_letter_blue" />
-        </LinearLayout>
+            android:text="@string/add_postal_addresses_title"
+            app:booleanVisibility="@{!viewModel.isAddressListVisible()}"
+            app:drawableBottomCompat="@drawable/icon_letter_blue" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/postAddressListView"
