--- a/app/src/main/res/layout/roll_out_text_panel_layout.xml
+++ b/app/src/main/res/layout/roll_out_text_panel_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
@@ -14,4 +14,4 @@
         app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/background_substrate_light_gray" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
