--- a/app/src/main/res/layout/fragment_add_edit_main_note.xml
+++ b/app/src/main/res/layout/fragment_add_edit_main_note.xml
@@ -7,62 +7,62 @@
             type="com.example.lifediary.ui.main.notes.AddEditMainNoteViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        style="@style/ScreenContainer"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp">
+        android:layout_height="wrap_content">
 
-        <ImageButton
-            android:id="@+id/deleteButton"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            app:layout_constraintTop_toTopOf="@id/addEditButtonsContainer"
-            app:layout_constraintBottom_toBottomOf="@id/addEditButtonsContainer"
-            app:layout_constraintStart_toStartOf="parent"
-            android:background="@drawable/icon_delete_red"
-            android:onClick="@{() -> viewModel.onDeleteNoteClick()}"
-            app:booleanVisibility="@{!viewModel.isAddButtonVisible}" />
-
-        <FrameLayout
-            android:id="@+id/addEditButtonsContainer"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-            <ImageView
-                android:id="@+id/addButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/icon_plus_green"
-                android:onClick="@{() -> viewModel.onSaveNoteClick()}"
-                app:booleanVisibility="@{viewModel.isAddButtonVisible}" />
-
-            <ImageView
-                android:id="@+id/saveButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/icon_check_green"
-                android:onClick="@{() -> viewModel.onSaveNoteClick()}"
-                app:booleanVisibility="@{!viewModel.isAddButtonVisible}" />
-        </FrameLayout>
-
-        <ScrollView
-            android:id="@+id/addNoteInputContainer"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/addEditButtonsContainer"
-            android:layout_marginTop="16dp">
+            style="@style/ScreenContainer"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
+
+            <ImageButton
+                android:id="@+id/deleteButton"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                app:layout_constraintTop_toTopOf="@id/addEditButtonsContainer"
+                app:layout_constraintBottom_toBottomOf="@id/addEditButtonsContainer"
+                app:layout_constraintStart_toStartOf="parent"
+                android:background="@drawable/icon_delete_red"
+                android:onClick="@{() -> viewModel.onDeleteNoteClick()}"
+                app:booleanVisibility="@{!viewModel.isAddButtonVisible}" />
+
+            <FrameLayout
+                android:id="@+id/addEditButtonsContainer"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+                <ImageView
+                    android:id="@+id/addButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/icon_plus_green"
+                    android:onClick="@{() -> viewModel.onSaveNoteClick()}"
+                    app:booleanVisibility="@{viewModel.isAddButtonVisible}" />
+
+                <ImageView
+                    android:id="@+id/saveButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/icon_check_green"
+                    android:onClick="@{() -> viewModel.onSaveNoteClick()}"
+                    app:booleanVisibility="@{!viewModel.isAddButtonVisible}" />
+            </FrameLayout>
+
             <EditText
                 android:id="@+id/addNoteInput"
                 style="@style/Input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/addEditButtonsContainer"
+                android:layout_marginTop="16dp"
                 android:inputType="textMultiLine"
                 android:text="@={viewModel.noteText}"
                 android:hint="@string/write_a_note" />
-        </ScrollView>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
