--- a/app/src/main/res/layout/fragment_menstruation_period_list.xml
+++ b/app/src/main/res/layout/fragment_menstruation_period_list.xml
@@ -11,7 +11,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        style="@style/ScreenContainer">
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp">
 
         <ImageButton
             android:id="@+id/clearAllButton"
@@ -19,6 +20,7 @@
             android:layout_height="34dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
             android:background="@drawable/icon_delete_sweep_color_link"
             android:onClick="@{() -> viewModel.onClearMenstruationPeriodListClick()}" />
 
