--- a/app/src/main/res/layout/menstruation_period_list_item.xml
+++ b/app/src/main/res/layout/menstruation_period_list_item.xml
@@ -15,7 +15,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:paddingTop="8dp"
-        android:paddingBottom="8dp">
+        android:paddingBottom="8dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp">
 
         <TextView
             android:id="@+id/titleView"
