--- a/app/src/main/res/layout/calendar_day_layout.xml
+++ b/app/src/main/res/layout/calendar_day_layout.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="36dp"
-    android:layout_height="36dp">
+    android:layout_height="36dp"
+    android:padding="2dp">
 
     <ImageView
         android:id="@+id/menstruationIcon"
