--- a/app/src/main/res/layout/fragment_add_edit_date_note.xml
+++ b/app/src/main/res/layout/fragment_add_edit_date_note.xml
@@ -24,10 +24,10 @@
             android:layout_marginTop="6dp">
             <EditText
                 android:id="@+id/addNoteInput"
-                style="@style/Input"
+                style="@style/Input.Text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
+                android:inputType="textMultiLine|textCapSentences"
                 android:text="@={viewModel.noteText}"
                 android:hint="@string/write_a_note" />
         </ScrollView>
