--- a/app/src/main/res/layout/fragment_add_edit_main_note.xml
+++ b/app/src/main/res/layout/fragment_add_edit_main_note.xml
@@ -54,12 +54,12 @@
 
             <EditText
                 android:id="@+id/addNoteInput"
-                style="@style/Input"
+                style="@style/Input.Text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/addEditButtonsContainer"
                 android:layout_marginTop="16dp"
-                android:inputType="textMultiLine"
+                android:inputType="textMultiLine|textCapSentences"
                 android:text="@={viewModel.noteText}"
                 android:hint="@string/write_a_note" />
 
