--- a/app/src/main/res/layout/fragment_location_selection.xml
+++ b/app/src/main/res/layout/fragment_location_selection.xml
@@ -25,7 +25,7 @@
 
         <EditText
             android:id="@+id/searchLocationInput"
-            style="@style/Input"
+            style="@style/Input.Text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/searchLocationInputHint"
@@ -33,7 +33,6 @@
             app:layout_constraintEnd_toStartOf="@id/searchLocationButton"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:inputType="text"
             android:singleLine="true"
             android:maxLength="70"
             android:text="@={viewModel.locationName}"
