--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -99,6 +99,10 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="Input.Text">
+        <item name="android:inputType">textCapSentences</item>
+    </style>
+
     <style name="Text.MainScreenSection">
         <item name="android:padding">16dp</item>
         <item name="android:textSize">20sp</item>
