--- a/app/src/main/res/layout/fragment_calendar_date.xml
+++ b/app/src/main/res/layout/fragment_calendar_date.xml
@@ -202,11 +202,21 @@
                 app:booleanVisibility="@{!viewModel.isToDoListVisible()}"
                 app:drawableBottomCompat="@drawable/icon_checklist_blue" />
 
+            <Spinner
+                android:id="@+id/sortMethodDropDown"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@id/addToDoListItemInput"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="16dp"
+                android:spinnerMode="dropdown"
+                app:booleanVisibility="@{viewModel.isDoListSortMethodDropDownVisible()}" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/toDoListView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@id/addToDoListItemInput"
+                app:layout_constraintTop_toBottomOf="@id/sortMethodDropDown"
                 android:layout_marginTop="8dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/to_do_list_item"
