--- a/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/app/src/main/res/layout/fragment_shopping_list.xml
@@ -66,7 +66,8 @@
             app:layout_constraintTop_toBottomOf="@id/addShoppingListItemInput"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="16dp"
-            android:spinnerMode="dropdown" />
+            android:spinnerMode="dropdown"
+            app:booleanVisibility="@{viewModel.isShoppingListSortMethodDropDownVisible()}" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/shoppingListView"
