--- a/app/src/main/res/layout/fragment_add_edit_main_note.xml
+++ b/app/src/main/res/layout/fragment_add_edit_main_note.xml
@@ -35,19 +35,19 @@
                 android:layout_height="48dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
-                <ImageView
+                <ImageButton
                     android:id="@+id/addButton"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/icon_plus_green"
+                    android:background="@drawable/icon_plus_green"
                     android:onClick="@{() -> viewModel.onSaveNoteClick()}"
                     app:booleanVisibility="@{viewModel.isAddButtonVisible}" />
 
-                <ImageView
+                <ImageButton
                     android:id="@+id/saveButton"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/icon_check_green"
+                    android:background="@drawable/icon_check_green"
                     android:onClick="@{() -> viewModel.onSaveNoteClick()}"
                     app:booleanVisibility="@{!viewModel.isAddButtonVisible}" />
             </FrameLayout>
