--- a/app/src/main/res/layout/fragment_calendar_date.xml
+++ b/app/src/main/res/layout/fragment_calendar_date.xml
@@ -108,11 +108,11 @@
                     android:gravity="center_vertical"
                     app:booleanVisibility="@{!viewModel.noteVisible}"
                     android:onClick="@{() -> viewModel.onAddNoteClick()}">
-                    <ImageView
+                    <ImageButton
                         android:id="@+id/addNoteButton"
                         android:layout_width="48dp"
                         android:layout_height="48dp"
-                        android:src="@drawable/icon_plus_green" />
+                        android:background="@drawable/icon_plus_green" />
                     <TextView
                         android:id="@+id/addNoteTextView"
                         style="@style/Text.MainControlsHint"
@@ -134,23 +134,23 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toStartOf="@id/editNoteButton"
+                        android:layout_marginEnd="8dp"
                         app:text="@{viewModel.noteText}" />
-                    <ImageView
+                    <ImageButton
                         android:id="@+id/editNoteButton"
-                        android:layout_width="40dp"
+                        android:layout_width="32dp"
                         android:layout_height="32dp"
                         app:layout_constraintTop_toTopOf="@id/noteView"
                         app:layout_constraintEnd_toStartOf="@id/deleteNoteButton"
-                        android:paddingStart="8dp"
-                        android:src="@drawable/icon_edit_blue"
+                        android:background="@drawable/icon_edit_blue"
                         android:onClick="@{() -> viewModel.onEditNoteClick()}" />
-                    <ImageView
+                    <ImageButton
                         android:id="@+id/deleteNoteButton"
                         android:layout_width="32dp"
                         android:layout_height="32dp"
                         app:layout_constraintTop_toTopOf="@id/noteView"
                         app:layout_constraintEnd_toEndOf="parent"
-                        android:src="@drawable/icon_delete_red"
+                        android:background="@drawable/icon_delete_red"
                         android:onClick="@{() -> viewModel.onDeleteNoteClick()}" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -180,14 +180,14 @@
                 android:text="@={viewModel.newToDoListItemText}"
                 android:hint="@string/what_should_be_done" />
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/addToDoListItemButton"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 app:layout_constraintTop_toTopOf="@id/addToDoListItemInput"
                 app:layout_constraintBottom_toBottomOf="@id/addToDoListItemInput"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:src="@drawable/icon_plus_green"
+                android:background="@drawable/icon_plus_green"
                 android:clickable="true"
                 android:onClick="@{() -> viewModel.onAddToDoListItemClick()}"/>
 
