--- a/app/src/main/res/layout/fragment_post_addresses.xml
+++ b/app/src/main/res/layout/fragment_post_addresses.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         style="@style/ScreenContainer">
 
-        <ImageView
+        <ImageButton
             android:id="@+id/clearAllButton"
             android:layout_width="34dp"
             android:layout_height="34dp"
@@ -22,7 +22,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:clickable="true"
             android:onClick="@{() -> viewModel.onClearPostAddressesClick()}"
-            android:src="@drawable/icon_delete_sweep_color_link" />
+            android:background="@drawable/icon_delete_sweep_color_link" />
 
         <TextView
             android:id="@+id/title"
