--- a/app/src/main/res/layout/main_note_list_item.xml
+++ b/app/src/main/res/layout/main_note_list_item.xml
@@ -18,7 +18,7 @@
             android:id="@+id/noteView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:text="@{viewModel.mainNoteListItem.text}" />
+            app:text="@{viewModel.noteText}" />
 
     </FrameLayout>
 </layout>
