--- a/app/src/main/res/layout/post_address_list_item.xml
+++ b/app/src/main/res/layout/post_address_list_item.xml
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/app_green"
-                android:text="@{viewModel.address.name}"
+                android:text="@{viewModel.addressName}"
                 app:booleanVisibility="@{viewModel.isAddresseeNameViewVisible}"
                 tools:text="Виталий Гудков" />
 
@@ -42,7 +42,7 @@
                 style="@style/Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{viewModel.address.street}"
+                android:text="@{viewModel.street}"
                 app:booleanVisibility="@{viewModel.isStreetViewVisible}"
                 tools:text="Литейный проспект" />
 
@@ -51,7 +51,7 @@
                 style="@style/Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text='@{String.format("%s %s", @string/bld, viewModel.address.buildingNumber)}'
+                android:text='@{String.format("%s %s", @string/bld, viewModel.buildingNumber)}'
                 app:booleanVisibility="@{viewModel.isBuildingNumberViewVisible}"
                 tools:text="Дом 63" />
 
@@ -60,7 +60,7 @@
                 style="@style/Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text='@{String.format("%s %s", @string/apt, viewModel.address.apartmentNumber)}'
+                android:text='@{String.format("%s %s", @string/apt, viewModel.apartmentNumber)}'
                 app:booleanVisibility="@{viewModel.apartmentViewVisible}"
                 tools:text="Квартира 87" />
 
@@ -69,7 +69,7 @@
                 style="@style/Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{viewModel.address.city}"
+                android:text="@{viewModel.city}"
                 app:booleanVisibility="@{viewModel.isCityViewVisible}"
                 tools:text="Санкт-Петербург" />
 
@@ -78,7 +78,7 @@
                 style="@style/Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{viewModel.address.edgeRegion}"
+                android:text="@{viewModel.edgeRegion}"
                 app:booleanVisibility="@{viewModel.edgeRegionViewVisible}"
                 tools:text="Ленинградская область" />
 
@@ -88,7 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:booleanVisibility="@{viewModel.isPostcodeViewVisible}"
-                android:text="@{viewModel.address.postcode}"
+                android:text="@{viewModel.postcode}"
                 tools:text="191025" />
         </LinearLayout>
 
