Main screen: fixed layout

--- a/app/src/main/res/layout/current_weather_view.xml
+++ b/app/src/main/res/layout/current_weather_view.xml
@@ -53,7 +53,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="14sp"
-        tools:text="ощущается как +21°C" />
+        tools:text="Ощущается как +21°C" />
 
     <TextView
         android:id="@+id/windView"
